# ECE-3220-Project

./: AssignmentScheduleBuilder.cpp  AssignmentScheduleBuilder.h  CMakeLists.txt  ConstraintScheduleBuilder.cpp  ConstraintScheduleBuilder.h  Course.cpp  Course.h  CourseFactory.cpp  CourseFactory.h  Dockerfile  Makefile  MessageHandler.cpp  MessageHandler.h  README.md  Schedule.cpp  Schedule.h  ScheduleBuilder.h  SchedulePlanner.cpp  SchedulePlanner.h  SlowScheduleBuilder.cpp  SlowScheduleBuilder.h  main.cpp  test.json  usage.txt
json_files/: test.json  test0.json  test1.json  test10.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
testing/: BuilderTest.h  CMakeLists.txt  FactoryTest.h  run_tests.cpp
